--- a/base/templates/threads/submit_post.html
+++ b/base/templates/threads/submit_post.html
@@ -10,8 +10,11 @@
     <div class='well'>
     In order to submit to <strong>upvote.pub</strong>, you must submit a publication ID. The examples table details the IDs supported. For more information on where to find these IDs see the <a href='{{ url_for("frontends.render_markdown", page='faq') }}#where-do-i-find-pub-ids'>FAQ</a>.
     </div>
-    {#{{ render_field(form.text, class="form-control", placeholder="body text", style="height: 150px;") }}#}
-    <button type="submit" value="Submit" class="btn btn-primary btn-block">Submit</button>
+    {% if user.email_verified %}
+        <button type="submit" value="Submit" class="btn btn-primary btn-block">Submit</button>
+    {% else %}
+        <button type="submit" value="Submit" class="btn btn-primary btn-block disabled">Please confirm your email to submit</button>
+        {% endif %}
   </form>
   </div>
   <div class='col-lg-6 col-md-6 col-sm-6'>
