--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Lucas Ou-Yang">
     <title>upvote.pub | {{ html_title or page_title }}</title>
     <meta name="keywords" content="science,publications,doi,pubmed,reddit,daniel e. cook">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap core CSS -->
     <!-- <link href="css/bootstrap.css" rel="stylesheet"> -->
