--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -37,6 +37,7 @@
       <div class="container-fluid">
 
         <div class="navbar-header">
+            {% if not is_bookmarklet %}
             <button type="button" class="navbar-toggle" data-toggle="collapse" 
                 data-target=".navbar-ex1-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -44,6 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          {% endif %}
           <a class="brand-nav" href="/">
                 <span class='brand-nav-color'>up</span>vote.pub <sup>beta</sup>
           </a>
