--- a/base/templates/threads/submit_post.html
+++ b/base/templates/threads/submit_post.html
@@ -3,13 +3,19 @@
 {% block left %}
   <div class="col-lg-6 col-md-6 col-sm-6 thread-submit-box">
   {% from "macros.html" import render_field %}
-  <form method="POST" action="." class="form bs-example form-horizontal">
+  <form method="POST" class="form bs-example form-horizontal">
     {{ form.csrf_token }}
     {{ render_field(form.pub_id, class="form-control", placeholder="URL, DOI, PMID, PMCID, arXiv or bioRxiv") }}
+    {% if form.subreddit %}
+         <br />
+         {{ render_field(form.subreddit, class="form-control") }}
+    {% endif %}
     <br />
+    {% if not is_bookmarklet %}
     <div class='well'>
     In order to submit to <strong>upvote.pub</strong>, you msust submit the URL for a publication or a publication ID. URLs can only be used with PubMed, PubMed Central, arXiv, and bioRxiv. The examples table details the IDs supported. For more information on where to find these IDs see the <a href='{{ url_for("frontends.render_markdown", page='faq') }}#where-do-i-find-pub-ids'>FAQ</a>.
     </div>
+    {% endif %}
     {% if user.email_verified %}
         <button type="submit" value="Submit" class="btn btn-primary btn-block">Submit</button>
     {% else %}
@@ -19,6 +25,7 @@
   </div>
   <div class='col-lg-6 col-md-6 col-sm-6'>
 
+{% if not is_bookmarklet %}
 <table class="table table-condensed table-hover">
     <thead>
         <tr>
@@ -55,6 +62,13 @@
         </tr>
     </tbody>
 </table>
+<hr />
+<small>You can also submit using a bookmarklet. Drag the link below to your browser bar
+to submit directly from pages on PubMed, PubMed Commons, arXiv, or bioRxiv.</small><br />
+
+<a class='bookmarklet' href="javascript:url=location.href;void(open('{{ request.url_root }}r/new?h=true&url=' + encodeURIComponent(url),'submit_post','toolbar=no,width=550,height=400'));">Submit to upvote.pub</a>
+
+{% endif %}
 
 </div>
 {% endblock %}
